--- a/claro.html
+++ b/claro.html
@@ -42,6 +42,10 @@
         </div>
 
     </div>
+    <section class="imagens">
+        <img src="imagens/imagens.webp" alt="">
+
+    </section>
     
 </body>
 </html>
