--- a/claro.html
+++ b/claro.html
@@ -46,6 +46,10 @@
         <img src="imagens/imagens.webp" alt="">
 
     </section>
+    <section class="ofertas">
+        <h2>1</h2>
+
+    </section>
     
 </body>
 </html>
