create: section planos

--- a/claro.html
+++ b/claro.html
@@ -215,6 +215,239 @@
         
 
     </section>
+    <section class="planos">
+        <div class="titulo-planos">
+            <h2>Planos pós pago com Passaporte mundo incluso
+            </h2>
+        </div>
+        <div class="container-planos">
+            <div class="itens-plano">
+                <div class="info-plano">
+                    <div class="imagens-plano">
+                        <img src="/imagens/img-passaporte.webp" alt="">
+                    </div>
+                    <div class="giga">
+                        <span>50GB</span>
+                        <p>25 plano +35GB videos <br><h4> + passaporte mundo</h4></p>
+                    </div>
+                    <div class="redes-social">
+                        <!-- tiktok -->
+                        <div class="tiktok">
+                            <i class="ph ph-tiktok-logo"></i>
+                            <span>Tik Tok ilimitado</span>
+                        </div>
+                        <!-- whatsaap -->
+                        <div class="Whatsaap">
+                            <i class="ph ph-whatsapp-logo"></i>
+                            <span>Whatsaap ilimitado</span>
+                        </div>
+                        <!-- instagram -->
+                        <div class="instagram">
+                            <i class="ph ph-instagram-logo"></i>
+                            <span>Instagram ilimitado</span>
+                        </div>
+                        <!-- facebbok -->
+                        <div class="facebook">
+                            <i class="ph ph-facebook-logo"></i>
+                            <span>Facebook ilimitado</span>
+
+                        </div>
+                        <!-- twitter -->
+                        <div class="twitter">
+                            <i class="ph ph-twitter-logo"></i>
+                            <span>Twitter ilimitado</span>
+                        </div>
+                        <!-- waze -->
+                        <div class="carro">
+                            <i class="ph ph-car-simple"></i>
+                            <span>Waze ilimitado</span>
+                        </div>
+                    </div>
+                    <div class="preço">
+                        <span>Por apenas</span>
+                        <h4>R$ 99,90 / mes</h4>
+                        <p>No debito automatico + fatura <br>digital</p>
+                    </div>
+                    <div class="btns-plano">
+                        <button>Contratar</button>
+
+                    </div>
+                </div>               
+            </div>
+            <!-- 2 -->
+            <div class="itens-plano">
+                <div class="info-plano">
+                    <div class="imagens-plano">
+                        <img src="/imagens/img-passaporte.webp" alt="">
+                    </div>
+                    <div class="giga">
+                        <span>100GB</span>
+                        <p>50GB plano +50GB videos <br><h4> + passaporte mundo</h4></p>
+                    </div>
+                    <div class="redes-social">
+                        <!-- tiktok -->
+                        <div class="tiktok">
+                            <i class="ph ph-tiktok-logo"></i>
+                            <span>Tik Tok ilimitado</span>
+                        </div>
+                        <!-- whatsaap -->
+                        <div class="Whatsaap">
+                            <i class="ph ph-whatsapp-logo"></i>
+                            <span>Whatsaap ilimitado</span>
+                        </div>
+                        <!-- instagram -->
+                        <div class="instagram">
+                            <i class="ph ph-instagram-logo"></i>
+                            <span>Instagram ilimitado</span>
+                        </div>
+                        <!-- facebbok -->
+                        <div class="facebook">
+                            <i class="ph ph-facebook-logo"></i>
+                            <span>Facebook ilimitado</span>
+
+                        </div>
+                        <!-- twitter -->
+                        <div class="twitter">
+                            <i class="ph ph-twitter-logo"></i>
+                            <span>Twitter ilimitado</span>
+                        </div>
+                        <!-- waze -->
+                        <div class="carro">
+                            <i class="ph ph-car-simple"></i>
+                            <span>Waze ilimitado</span>
+                        </div>
+                    </div>
+                    <div class="preço">
+                        <span>Por apenas</span>
+                        <h4>R$ 149,90/ mes</h4>
+                        <p>No debito automatico + fatura <br>digital</p>
+                    </div>
+                    <div class="btns-plano">
+                        <button>Contratar</button>
+
+                    </div>
+                </div>               
+            </div>
+            <!-- 3 -->
+            <div class="itens-plano">
+                <div class="info-plano">
+                    <div class="imagens-plano">
+                        <img src="/imagens/img-passaporte.webp" alt="">
+                    </div>
+                    <div class="giga">
+                        <span>200GB</span>
+                        <p>100GB plano + 100GB videos <br><h4> + passaporte mundo</h4></p>
+                    </div>
+                    <div class="redes-social">
+                        <!-- tiktok -->
+                        <div class="tiktok">
+                            <i class="ph ph-tiktok-logo"></i>
+                            <span>Tik Tok ilimitado</span>
+                        </div>
+                        <!-- whatsaap -->
+                        <div class="Whatsaap">
+                            <i class="ph ph-whatsapp-logo"></i>
+                            <span>Whatsaap ilimitado</span>
+                        </div>
+                        <!-- instagram -->
+                        <div class="instagram">
+                            <i class="ph ph-instagram-logo"></i>
+                            <span>Instagram ilimitado</span>
+                        </div>
+                        <!-- facebbok -->
+                        <div class="facebook">
+                            <i class="ph ph-facebook-logo"></i>
+                            <span>Facebook ilimitado</span>
+
+                        </div>
+                        <!-- twitter -->
+                        <div class="twitter">
+                            <i class="ph ph-twitter-logo"></i>
+                            <span>Twitter ilimitado</span>
+                        </div>
+                        <!-- waze -->
+                        <div class="carro">
+                            <i class="ph ph-car-simple"></i>
+                            <span>Waze ilimitado</span>
+                        </div>
+                    </div>
+                    <div class="preço">
+                        <span>Por apenas</span>
+                        <h4>R$ 199,90/ mes</h4>
+                        <p>No debito automatico + fatura <br>digital</p>
+                    </div>
+                    <div class="btns-plano">
+                        <button>Contratar</button>
+
+                    </div>
+                </div>               
+            </div>
+            <!-- 4 -->
+            <div class="itens-plano">
+                <div class="info-plano">
+                    <div class="imagens-plano">
+                        <img src="/imagens/img-passaporte.webp" alt="">
+                    </div>
+                    <div class="giga">
+                        <span>400GB</span>
+                        <p>200GB plano + 200GB videos <br><h4> + passaporte mundo</h4></p>
+                    </div>
+                    <div class="redes-social">
+                        <!-- tiktok -->
+                        <div class="tiktok">
+                            <i class="ph ph-tiktok-logo"></i>
+                            <span>Tik Tok ilimitado</span>
+                        </div>
+                        <!-- whatsaap -->
+                        <div class="Whatsaap">
+                            <i class="ph ph-whatsapp-logo"></i>
+                            <span>Whatsaap ilimitado</span>
+                        </div>
+                        <!-- instagram -->
+                        <div class="instagram">
+                            <i class="ph ph-instagram-logo"></i>
+                            <span>Instagram ilimitado</span>
+                        </div>
+                        <!-- facebbok -->
+                        <div class="facebook">
+                            <i class="ph ph-facebook-logo"></i>
+                            <span>Facebook ilimitado</span>
+
+                        </div>
+                        <!-- twitter -->
+                        <div class="twitter">
+                            <i class="ph ph-twitter-logo"></i>
+                            <span>Twitter ilimitado</span>
+                        </div>
+                        <!-- waze -->
+                        <div class="carro">
+                            <i class="ph ph-car-simple"></i>
+                            <span>Waze ilimitado</span>
+                        </div>
+                    </div>
+                    <div class="preço">
+                        <span>Por apenas</span>
+                        <h4>R$ 299,90/ mes</h4>
+                        <p>No debito automatico + fatura <br>digital</p>
+                    </div>
+                    <div class="btns-plano">
+                        <button>Contratar</button>
+
+                    </div>
+                </div>               
+            </div>
+        </div>
+        <div class="passaporte">
+            <div class="titulo-passaporte">
+                <h2>Passaporte mmundo por 12 meses no plano pós</h2>
+            </div>
+            <div class="icone">
+                <i class="ph ph-control"></i>
+
+            </div>
+        </div>
+
+    </section>
     
 </body>
 </html>
