create:banada larga

--- a/claro.html
+++ b/claro.html
@@ -554,6 +554,77 @@
                 </div>
             </div> 
         </div>
-    </section>    
+    </section>  
+    <section class="banda-larga">
+        <div class="titulo-banda-larga">
+            <h2>Planos de internet banda larga com Globoplay
+            </h2>
+        </div>
+        <div class="container-banda-larga">
+            <div class="itens-banda-larga">
+                <div class="mega">
+                    <span>500 MEGA</span>
+                    <p>App Incluso</p>
+                    <img src="/imagens/globoplay.svg" height="50px" alt="">
+
+                </div>
+                <div class="valor">
+                    <span>Por:</span>
+                    <h4>R$ 139,00/mes</h4>
+                    <p> plano individual</p>
+                    <button>Assinar</button>
+
+                </div>
+                <div class="detalhes">
+                    <span>detalhes</span>
+                    <i class="ph ph-caret-down"></i>
+                </div>
+
+            </div>
+            <!-- 2 -->
+            <div class="itens-banda-larga">
+                <div class="mega">
+                    <span>750 MEGA</span>
+                    <p>App Incluso</p>
+                    <img src="/imagens/globoplay.svg" height="50px" alt="">
+
+                </div>
+                <div class="valor">
+                    <span>Por:</span>
+                    <h4>R$ 169,00/mes</h4>
+                    <p> plano individual</p>
+                    <button>Assinar</button>
+
+                </div>
+                <div class="detalhes">
+                    <span>detalhes</span>
+                    <i class="ph ph-caret-down"></i>
+                </div>
+
+            </div>
+            <!-- 3 -->
+            <div class="itens-banda-larga">
+                <div class="mega">
+                    <span>1 GIGA</span>
+                    <p>App Incluso</p>
+                    <img src="/imagens/globoplay.svg" height="50px" alt="">
+
+                </div>
+                <div class="valor">
+                    <span>Por:</span>
+                    <h4>R$ 299,90/mes</h4>
+                    <p> plano individual</p>
+                    <button>Assinar</button>
+
+                </div>
+                <div class="detalhes">
+                    <span>detalhes</span>
+                    <i class="ph ph-caret-down"></i>
+                </div>
+
+            </div>
+        </div>
+
+    </section>  
 </body>
 </html>
