create: claro tv

--- a/claro.html
+++ b/claro.html
@@ -555,6 +555,7 @@
             </div> 
         </div>
     </section>  
+    <!-- BANDA LARGA -->
     <section class="banda-larga">
         <div class="titulo-banda-larga">
             <h2>Planos de internet banda larga com Globoplay
@@ -624,7 +625,82 @@
 
             </div>
         </div>
+    </section>
+    <section class="claro-tv">
+        <div class="titulo-claro-tv">
+            <h2>Planos Claro tv+ com Globoplay
+            </h2>
+        </div>
+        <div class="img-claro">
+            <img src="/imagens/box.webp" alt="imagens televisao">
+            <img src="/imagens/tv4k.webp" alt="imagens televisao">
+            <img src="/imagens/sounbox.webp" alt="imagens televisao">
+        </div>
+        <div class="container-claro">
+            <div class="itens-claro">
+                <div class="tv">
+                    <span>Box Claro tv+</span>
+                    <p>Transforme sua TV numa Smart TV com muito mais mobilidade.</p>
 
-    </section>  
+                    <h4>App incluso</h4>
+                    <img src="/imagens/globoplay.svg" alt="">
+                </div>
+                <div class="price">
+                    <span>De R$99,90 por:</span>
+                    <h4>R$89,90/mês</h4>
+                    <p>no debito automatico</p>
+                    <button>assinar</button>
+
+                </div>
+                <div class="info-detalhes">
+                    <span>detalhes</span>
+                    <i class="ph ph-caret-down"></i>
+                </div>
+            </div>
+            <!-- 2 -->
+            <div class="itens-claro">
+                <div class="tv">
+                    <span>Box Claro tv+</span>
+                    <p>Transforme sua TV numa Smart TV com muito mais mobilidade.</p>
+
+                    <h4>App incluso</h4>
+                    <img src="/imagens/globoplay.svg" alt="">
+                </div>
+                <div class="price">
+                    <span>De R$99,90 por:</span>
+                    <h4>R$89,90/mês</h4>
+                    <p>no debito automatico</p>
+                    <button>assinar</button>
+
+                </div>
+                <div class="info-detalhes">
+                    <span>detalhes</span>
+                    <i class="ph ph-caret-down"></i>
+                </div>
+            </div>
+            <!-- 3 -->
+            <div class="itens-claro">
+                <div class="tv">
+                    <span>Box Claro tv+</span>
+                    <p>Transforme sua TV numa Smart TV com muito mais mobilidade.</p>
+
+                    <h4>App incluso</h4>
+                    <img src="/imagens/globoplay.svg" alt="">
+                </div>
+                <div class="price">
+                    <span>De R$99,90 por:</span>
+                    <h4>R$89,90/mês</h4>
+                    <p>no debito automatico</p>
+                    <button>assinar</button>
+
+                </div>
+                <div class="info-detalhes">
+                    <span>detalhes</span>
+                    <i class="ph ph-caret-down"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+      
 </body>
 </html>
