create: section vantagens

--- a/claro.html
+++ b/claro.html
@@ -701,6 +701,109 @@
             </div>
         </div>
     </section>
-      
+    <!-- VANTAGENS -->
+    <section class="vantagens">
+        <div class="titulo-vantagens">
+            <h2>Claro Multi: vantagens exclusivas no combo
+            </h2>
+        </div>
+        <div class="container-vantagens">
+            <div class="itens-vantagens">
+                <div class="megas">
+                    <span>350 Mega com Box Claro <br> tv+</span>
+                    <p>App incluso</p>
+                    <img src="/imagens/globoplay.svg" alt="">
+
+                </div>
+                <div class="reais">
+                    <span>Por:</span>
+                    <h4>R$189,90</h4>
+                    <p>no debito automatico</p>
+
+                    <button>assinar</button>
+                </div>
+                <div class="detalhes-plano">
+                    <span>detalhes</span>
+                    <i class="ph ph-caret-down"></i>
+
+                </div>
+            </div>
+            <!-- 2 -->
+            <div class="itens-vantagens">
+                <div class="megas">
+                    <span>500 Mega com <br> Box Claro tv+</span>
+                    <p>App incluso</p>
+                    <img src="/imagens/globoplay.svg" alt="">
+
+                </div>
+                <div class="reais">
+                    <span>Por:</span>
+                    <h4>R$209,90</h4>
+                    <p>no debito automatico</p>
+
+                    <button>assinar</button>
+                </div>
+                <div class="detalhes-plano">
+                    <span>detalhes</span>
+                    <i class="ph ph-caret-down"></i>
+
+                </div>
+            </div>
+            <!-- 3 -->
+            <div class="itens-vantagens">
+                <div class="megas">
+                    <span>350 Mega com Box Claro <br> tv+</span>
+                    <p>App incluso</p>
+                    <div class="icones">
+                        <img src="/imagens/globoplay.svg" alt="imagens globoplay">
+                        <img src="/imagens/whatsapp.svg" alt="imagens whatsaap">
+                        <img src="/imagens/instagram.svg" alt="imagens iinstagram">
+                        <label for="">+3</label>
+
+                    </div>
+
+                </div>
+                <div class="reais">
+                    <span>Por:</span>
+                    <h4>R$159,90</h4>
+                    <p>no debito automatico</p>
+
+                    <button>assinar</button>
+                </div>
+                <div class="detalhes-plano">
+                    <span>detalhes</span>
+                    <i class="ph ph-caret-down"></i>
+
+                </div>
+            </div>
+            <!-- 4 -->
+            <div class="itens-vantagens">
+                <div class="megas">
+                    <span>350 Mega com Box Claro <br> tv+</span>
+                    <p>App incluso</p>
+                    <div class="icones">
+                        <img src="/imagens/globoplay.svg" alt="imagens globoplay">
+                        <img src="/imagens/tik-tok.svg" alt="">
+                        <img src="/imagens/whatsapp.svg" alt="imagens whatsaap">
+                        <img src="/imagens/instagram.svg" alt="imagens iinstagram">
+                    </div>
+
+                </div>
+                <div class="reais">
+                    <span>Por:</span>
+                    <h4>R$189,90</h4>
+                    <p>no debito automatico</p>
+
+                    <button>assinar</button>
+                </div>
+                <div class="detalhes-plano">
+                    <span>detalhes</span>
+                    <i class="ph ph-caret-down"></i>
+                </div>
+            </div>
+
+        </div>
+
+    </section>  
 </body>
 </html>
