create: section beneficio

--- a/claro.html
+++ b/claro.html
@@ -803,7 +803,26 @@
             </div>
 
         </div>
-
+    </section>
+    <!-- BENEFICIO -->
+    <section class="beneficio">
+        <div class="titulo-beneficio">
+            <h2>Saiba como ativar o benefício Globoplay do seu plano
+            </h2>
+        </div>
+        <div class="ativaçao">
+            <span>Goboplay inclluso - ativaçao</span>
+            <i class="ph ph-caret-down"></i>
+        </div>
+        
     </section>  
+    <!-- COMPRE -->
+    <section class="compre">
+        <h2>Compre um smartphone e leve outro com super desconto
+        </h2>
+        <p>No plano Claro pós 200GB + 200GB no Multi
+        </p>
+
+    </section>
 </body>
 </html>
