create: section compre

--- a/claro.html
+++ b/claro.html
@@ -818,11 +818,17 @@
     </section>  
     <!-- COMPRE -->
     <section class="compre">
-        <h2>Compre um smartphone e leve outro com super desconto
-        </h2>
-        <p>No plano Claro pós 200GB + 200GB no Multi
-        </p>
+        <div class="titulo-compre">
+            <h2>Compre um smartphone e leve outro com super desconto
+            </h2>
+            <p>No plano Claro pós 200GB + 200GB no Multi
+            </p>
+        </div>
+        <div class="imagens-compre">
+            <img src="/imagens/m.webp" alt="">
+            <img src="/imagens/m (1).webp" alt="">
 
+        </div>
     </section>
 </body>
 </html>
