--- a/claro.html
+++ b/claro.html
@@ -830,5 +830,38 @@
 
         </div>
     </section>
+    <!-- streamings -->
+    <section class="streamings">
+        <div class="titulo-streamings">
+            <h2>Streamings e Canais Avulsos
+            </h2>
+        </div>
+        <div class="container-streamings">
+            <div class="imagens-streamings">
+                <img src="/imagens/img-streamings.webp" alt="">
+
+            </div>
+            <div class="texto">
+                <h3>telecone</h3>
+            </div>
+            <div class="dolar">
+                <span>De: R$19,90/mês</span>
+                <h4>R$14,90/mês</h4>
+                <button>Assine</button>
+
+                </div>
+
+            </div>
+            <div class="info">
+                <span>detalhes</span>
+                <i class="ph ph-caret-down"></i>
+
+
+
+            </div>
+
+        </div>
+
+    </section>
 </body>
 </html>
