create: section produtos

--- a/claro.html
+++ b/claro.html
@@ -855,13 +855,45 @@
             <div class="info">
                 <span>detalhes</span>
                 <i class="ph ph-caret-down"></i>
-
-
+            </div>
+        </div>
+    </section>
+    <!-- PRODUTOS -->
+    <section class="produtos">
+        <div class="titulo-produtos">
+            <h2>Ofertas de outros produtos para você aproveitar
+            </h2>
+        </div>
+        <div class="recargas">
+            <a href="#">Recargas</a>
+            <a href="#">Flex</a>
+            <a href="#">claro Play</a>
+            <a href="#">Empresas</a>
+        </div>
+        <div class="info-recargas">
+            <div class="img-giga">
+                <img src="/imagens/m (2).webp" alt="">
+            </div>
+            <div class="prezao">
+                <span>Prezao</span>
+                <p>Prezão com bônus exclusivos no Minha Claro. Ganhe até 22GB nas recargas a partir de R$20.
+                </p>
 
             </div>
-
+            <div class="btn-saibamais">
+                <button>Saiba mais</button>
+            </div>
         </div>
+        <div class="contratos">
+            <div class="titulos-contrato">
+                <span>Contratos e Regulamentos Blac Friday 2023 </span>
 
+            </div>
+            <div class="icone-contrato">
+                <i class="ph ph-caret-down"></i>
+
+            </div>
+        </div>
     </section>
 </body>
 </html>
