cretate: section acessorios

--- a/claro.html
+++ b/claro.html
@@ -895,5 +895,85 @@
             </div>
         </div>
     </section>
+    <!-- ACESSORIOS -->
+    <section class="acessorios">
+        <div class="titulo-acessorios">
+            <h2>Ofertas imperdíveis de acessórios
+            </h2>
+            <p>Confira os acessórios que vão trazer muito mais praticidade no seu dia a dia
+            </p>
+        </div>
+        <div class="container-acessorios">
+            <div class="itens-acessorios">
+                <div class="img-acessorio">
+                    <img src="/imagens/alexa.webp" alt="">
+
+                </div>
+                <div class="info-acessorios">
+                    <span>Alexa</span>
+                    <h3>Echo Show 5</h3>
+
+                </div>
+                <div class="dinheiro">
+                    <h3>De R$549 por:</h3>
+                    <h2>529</h2>
+                    <button>Eu quero</button>
+
+                </div>
+
+            </div>
+            <!-- 2 -->
+            <div class="itens-acessorios">
+                <div class="img-acessorio">
+                    <img src="/imagens/balança.webp" alt="">
+
+                </div>
+                <div class="info-acessorios">
+                    <span>Geonav</span>
+                    <h3>balança inteligente</h3>
+
+                </div>
+                <div class="dinheiro">
+                    <h3>De R$299 por:</h3>
+                    <h2>199</h2>
+                    <button>Eu quero</button>
+                </div>
+            </div>
+            <!-- 3 -->
+            <div class="itens-acessorios">
+                <div class="img-acessorio">
+                    <img src="/imagens/illuminaria.webp" alt="">
+
+                </div>
+                <div class="info-acessorios">
+                    <span>Geonav</span>
+                    <h3>iluminaria de mesa inteligente</h3>
+
+                </div>
+                <div class="dinheiro">
+                    <h3>De R$299 por:</h3>
+                    <h2>199</h2>
+                    <button>Eu quero</button>
+                </div>
+            </div>
+            <!-- 4 -->
+            <div class="itens-acessorios">
+                <div class="img-acessorio">
+                    <img src="/imagens/balança.webp" alt="">
+
+                </div>
+                <div class="info-acessorios">
+                    <span>Confira todas as ofetras</span>
+                    <h3>balança inteligente</h3>
+
+                </div>
+                <div class="dinheiro">
+                    <h3>Umma seleçao de ofertas imperdiveis pra voce aprovwitar</h3>
+                    <h2>black friday claro</h2>
+                    <button>Eu quero</button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
