create: section duvidas

--- a/claro.html
+++ b/claro.html
@@ -975,5 +975,60 @@
             </div>
         </div>
     </section>
+    <!-- DUVIDAS -->
+    <section class="duvidas">
+        <div class="titulo-duvidas">
+            <h2>Dúvidas sobre a Black Friday?
+            </h2>
+        </div>
+        <div class="links">
+            <nav>
+                <li>
+                    <a href="#">O que é a Black Friday? </a>
+                </li>
+            </nav>
+            <i class="ph ph-caret-down"></i>
+        </div>
+        <div class="links">
+            <nav>
+                <li>
+                    <a href="#">Quando é a Black Friday 2023?</a>
+                </li>
+            </nav>
+            <i class="ph ph-caret-down"></i>
+        </div>
+        <div class="links">
+            <nav>
+                <li>
+                    <a href="#">Como funciona a Black frifay na claro?</a>
+                </li>
+            </nav>
+            <i class="ph ph-caret-down"></i>
+        </div>
+        <div class="links">
+            <nav>
+                <li>
+                    <a href="#">Quas sao as promoçoes de smartphones da black friday 2023 da claro?</a>
+                </li>
+            </nav>
+            <i class="ph ph-caret-down"></i>
+        </div>
+        <div class="links">
+            <nav>
+                <li>
+                    <a href="#">Quantos tempo dura black friday claro?</a>
+                </li>
+            </nav>
+            <i class="ph ph-caret-down"></i>
+        </div>
+        <div class="links">
+            <nav>
+                <li>
+                    <a href="#">O que significa black friday:</a>
+                </li>
+            </nav>
+            <i class="ph ph-caret-down"></i>
+        </div>
+    </section>
 </body>
 </html>
