--- a/claro.html
+++ b/claro.html
@@ -1030,5 +1030,52 @@
             <i class="ph ph-caret-down"></i>
         </div>
     </section>
+    <!-- OPÇOES -->
+    <section class="opçoes">
+        <div class="itens-opçoes">
+            <a href="#">Mais opçoes</a>
+            <i class="ph ph-caret-down"></i>
+        </div>
+        <div class="conatiner-opçoes">
+            <div class="acesso">
+                <span>Acesso</span>
+                <a href="#">Minha Claro Residencial</a>
+                <a href="#">Minha Claro Movel</a>
+                <a href="#">Televendas</a>
+
+            </div>
+            <div class="acesso">
+                <span>Atendimento</span>
+                <a href="#">Autoatendimento</a>
+                <a href="#">Cadastro e senhas</a>
+                <a href="#">2ª via de fatura</a>
+                <a href="#">Recargas</a>
+                <a href="#">Chamadas de video em Libras</a>
+                <a href="#">Perguntas frequentes</a>
+                <a href="#">Ouvidoria</a>
+
+            </div>
+            <div class="acesso">
+                <span>Regulatorio</span>
+                <a href="#">Contrato e regulamentos</a>
+                <a href="#">Politica de privacidade</a>
+                <a href="#">Portal de Privacidade</a>
+                <a href="#">Segurança</a>
+                <a href="#">Portal de denuncias</a>
+                <a href="#">Interrupçao de serviços</a>
+
+            </div>
+            <div class="acesso">
+                <div class="itens-premio">
+                    <img src="/imagens/logo-premio.webp" alt="">
+                    <span>Premio Anatel de <br>Acessibilidade em <br>Telecomunicaçoes 2023</span>
+
+                </div>
+
+            </div>
+            
+        </div>
+
+    </section>
 </body>
 </html>
