create: footer final

--- a/claro.html
+++ b/claro.html
@@ -1069,13 +1069,38 @@
                 <div class="itens-premio">
                     <img src="/imagens/logo-premio.webp" alt="">
                     <span>Premio Anatel de <br>Acessibilidade em <br>Telecomunicaçoes 2023</span>
-
                 </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="itens1">
+            <div class="icones">
+                <a href="#"><i class="ph ph-facebook-logo"></i></a>
+                <a href="#"><i class="ph ph-twitter-logo"></i></a>
+                <a href="#"><i class="ph ph-instagram-logo"></i></a>
+                <a href="#"><i class="ph ph-youtube-logo"></i></a>
+                <a href="#"><i class="ph ph-linkedin-logo"></i></a>
+                <a href="#"><i class="ph ph-tiktok-logo"></i></a>
+                <a href="#"><i class="ph ph-device-mobile-camera"></i></a>
+            </div>
+            <div class="politica">
+                <a href="#">Plolitica de privacidade</a>
+                <a href="#">Portal de Privacidade</a>
+                <img src="/imagens/libras.png" alt="">
+            </div>
+            <div class="endereço">
+                <span>© 2023 Claro. Todos os direitos reservados. CNPJ: 40.432.544/0001-47 - Rua Henri Dunant, 780 - São Paulo - SP
+
+                </span>
 
             </div>
-            
-        </div>
 
-    </section>
+        </div>
+        <div class="itens2">
+            <img src="/imagens/logo-claro.webp" alt="">
+
+        </div>
+    </footer>
 </body>
 </html>
